# PandOSsh

./: .gitignore  AUTHOR.md  CAUSE_EXCCODE_MASK.txt  CMakeLists.txt  Divisioni.txt  README.md  config_machine.json  documentazione2.tex  klog.c  phase3_config_machine.json
documentazione/documentazioneTEX/: documentazione3.tex
documentazioneTEX/: documentazione1.tex  documentazione2.tex  documentazione3.tex
headers/: const.h  listx.h  types.h
phase1/: asl.c  p1test.c  pcb.c
phase1/headers/: asl.h  pcb.h
phase2/headers/: aux.h  auxfun.h  exceptions.h  interrupts.h  scheduler.h  syscall.h
phase2/src/: aux.c  auxfun.c  exceptions.c  initial.c  interrupts.c  p2test.c  scheduler.c  syscall.c
phase3/headers/: helpers.h  initProc.h  sysSupport.h  syscalls.h  vmSupport.h
phase3/src/: helpers.c  initProc.c  sysSupport.c  syscalls.c  vmSupport.c
phase3/testers/: Makefile  calc.c  date.c  fibEight.c  shell.c  uname.c
testers/: Makefile  calc.c  echo.c  fibEleven.c  print.c  shell.c  sl.c
testers/h/: tconst.h
uild/: CMakeCache.txt  Makefile  cmake_install.cmake
